# Fuzzyometry

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: python-publish.yml  python-test.yml
examples/: chamfer.py  cuboidIr.py  cuboidOr.py  gear.py  screw.py  surfaceripple.py
fuzzyometry/: bodies.py  combinations.py  gears.py  threads.py
tests/: test_render.py
